SGD8-2765: Fix teaser heading spacing

--- a/components/31-molecules/teaser/_teaser.scss
+++ b/components/31-molecules/teaser/_teaser.scss
@@ -171,7 +171,7 @@
   &.no-image,
   .teaser--no-images & {
     h3 {
-      margin: 0;
+      margin: 0 0 20px;
     }
 
     .content__second {
@@ -193,7 +193,7 @@
     &.no-image,
     .teaser--no-images & {
       h3 {
-        margin: 0;
+        margin: 0 0 20px;
       }
 
       .content__second {
